--- a/src/manifest/examples/uefi-root-on-lvm.yaml
+++ b/src/manifest/examples/uefi-root-on-lvm.yaml
@@ -50,6 +50,7 @@ rootfs:
   device: /dev/archvg/rootlv # Use the LVM device created above
   fstype: btrfs
   fsopts: -L rootfs
+  mnt: /
   mntopts: "compress:zstd:3"
 
 # Create extra filesystems
