--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4", features = ["derive"] }
 toml = "0.7"
 serde_json = "1.0"
 humanize-rs = ">=0.1.5"
+shlex = ">=1.2"
 
 [badges]
 github = { repository = "soyart/ali-rs", workflow = "cargo_test" }
