--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ toml = "0.7"
 serde_json = "1.0"
 humanize-rs = ">=0.1.5"
 shlex = ">=1.2"
+pwhash = "1"
 
 [badges]
 github = { repository = "soyart/ali-rs", workflow = "cargo_test" }
