feat: handle manifest key `mountpoints`

--- a/src/ali/examples/uefi-root-on-lvm-on-luks.yaml
+++ b/src/ali/examples/uefi-root-on-lvm-on-luks.yaml
@@ -24,6 +24,7 @@ dm:
   - type: luks
     device: /dev/vda2
     name: crypty
+    key: mysupersecret
 
   # Create LVM devices
   - type: lvm
@@ -50,13 +51,12 @@ dm:
 # with command:
 # mkfs.btrfs -L /dev/archvg/rootlv
 #
-# And mount it to /mnt of live system with:
+# And mount it to /alitarget of live system with:
 # mount -o compress:zstd:3 /dev/archvg/roolv
 rootfs:
   device: /dev/archvg/rootlv # Use the LVM device created above
   fstype: btrfs
   fsopts: -L rootfs
-  mnt: /
   mntopts: "compress:zstd:3"
 
 # Create extra filesystems
@@ -69,8 +69,10 @@ fs:
   - device: /dev/vda1
     fstype: vfat
     fsopts: -F 32 -L BOOT
-    mnt: /boot
-    mntopts:
+
+mountpoints:
+  - device: /dev/vda1
+    dest: /boot
 
 # Create swap with:
 # mkswap /dev/archvg/swaplv
@@ -81,18 +83,20 @@ swap:
   - /dev/archvg/swaplv
 
 pacstrap:
-  - base
   - base-devel
+  - curl
   - git
   - helix
 
 # Commands to run in chroot
 chroot:
   - "bootctl --path=/boot install"
-  - "curl https://example.com/arch/boot-entries > /boot/loader/entries/main.conf"
-  - "curl https://example.com/arch/boot-entries > setup-boot.sh"
+  - "curl https://example.com/arch-templates/lvm-on-luks/boot-entries/main.conf > /boot/loader/entries/main.conf"
+  - "curl https://example.com/arch-templates/lvm-on-luks/boot-entries/setup-boot.sh > setup-boot.sh"
   - "chmod +x setup-boot.sh"
   - "./setup-boot.sh"
+
+rootpasswd: $6$mysalt$ToMpSyNM/gQrU9/7eiLTJdkU68LAZ4hdQPSMu9h.Etl2XT9mQ2z7W5IVWcezAbXdw5xmXi86.VkNVSrpg9IBv.
 
 # Command to run on the live system
 postinstall:
