--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ shlex = ">=1.2"
 pwhash = "1"
 colored = ">=2"
 ureq = ">=2.8"
+nix = { version = ">=0.27", features = ["user"] }
 
 [badges]
 github = { repository = "soyart/ali-rs", workflow = "cargo-test" }
