chore: release actions

--- a/.github/workflows/release-create.yaml
+++ b/.github/workflows/release-create.yaml
@@ -20,28 +20,28 @@ jobs:
           # (required)
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # upload-assets:
-  #   strategy:
-  #     matrix:
-  #       os:
-  #         - ubuntu-latest
-  #         - macos-latest
+  upload-assets:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macos-latest
 
-  #   runs-on: ${{ matrix.os }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: taiki-e/upload-rust-binary-action@v1
-  #       with:
-  #         # (required)
-  #         bin: ali-rs
-  #         # (optional) On which platform to distribute the `.tar.gz` file.
-  #         # [default value: unix]
-  #         # [possible values: all, unix, windows, none]
-  #         tar: unix
-  #         # (optional) On which platform to distribute the `.zip` file.
-  #         # [default value: windows]
-  #         # [possible values: all, unix, windows, none]
-  #         zip: windows
-  #       env:
-  #         # (required)
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: taiki-e/upload-rust-binary-action@v1
+        with:
+          # (required)
+          bin: ali-rs
+          # (optional) On which platform to distribute the `.tar.gz` file.
+          # [default value: unix]
+          # [possible values: all, unix, windows, none]
+          tar: unix
+          # (optional) On which platform to distribute the `.zip` file.
+          # [default value: windows]
+          # [possible values: all, unix, windows, none]
+          zip: macos
+        env:
+          # (required)
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
