chore: fix target

--- a/.github/workflows/release-create.yaml
+++ b/.github/workflows/release-create.yaml
@@ -41,7 +41,7 @@ jobs:
           # (optional) On which platform to distribute the `.zip` file.
           # [default value: windows]
           # [possible values: all, unix, windows, none]
-          zip: macos
+          # zip: windows
         env:
           # (required)
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
