--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ ureq = ">=2.8"
 nix = { version = ">=0.27", features = ["user"] }
 
 [badges]
-github = { repository = "soyart/ali-rs", workflow = "cargo-test" }
+github = { repository = "soyart/ali-rs", workflow = "test" }
 maintenance = { status = "actively-developed" }
