chore: allow manual run of `prune-workflows`

--- a/.github/workflows/prune-workflows.yaml
+++ b/.github/workflows/prune-workflows.yaml
@@ -1,8 +1,9 @@
 name: prune old workflow runs
 on:
+  workflow_dispatch:
   schedule:
+    # Run monthly, at 00:00 on the 1st day of month.
     - cron: '0 0 1 * *'
-# Run monthly, at 00:00 on the 1st day of month.
 
 jobs:
   del_runs:
